--- a/MyMonee-Final/Views/HomeViewController.xib
+++ b/MyMonee-Final/Views/HomeViewController.xib
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina6_1" orientation="portrait" appearance="light"/>
+    <device id="retina6_1" orientation="landscape" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
@@ -34,32 +34,32 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+            <rect key="frame" x="0.0" y="0.0" width="896" height="414"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pT8-XS-HFo">
-                    <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                    <rect key="frame" x="44" y="0.0" width="808" height="393"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Msc-Qr-7vK" userLabel="Content View">
-                            <rect key="frame" x="0.0" y="0.0" width="414" height="568"/>
+                            <rect key="frame" x="0.0" y="0.0" width="808" height="568"/>
                             <subviews>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2kR-Ur-p98" userLabel="Greeting View">
-                                    <rect key="frame" x="16" y="16" width="382" height="61"/>
+                                    <rect key="frame" x="16" y="16" width="776" height="61"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Selamat &lt;CurrentTime&gt;," textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9KW-RS-1Xv" userLabel="Greeting">
-                                            <rect key="frame" x="0.0" y="0.0" width="346" height="36"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="740" height="36"/>
                                             <fontDescription key="fontDescription" name="Poppins-SemiBold" family="Poppins" pointSize="24"/>
                                             <color key="textColor" name="4F4F4F"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="&lt;Your Name&gt;" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Wt8-nV-2TT" userLabel="User Name">
-                                            <rect key="frame" x="0.0" y="40" width="346" height="17"/>
+                                            <rect key="frame" x="0.0" y="40" width="740" height="17"/>
                                             <fontDescription key="fontDescription" name="Poppins-Regular" family="Poppins" pointSize="12"/>
                                             <color key="textColor" name="828282"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <imageView clipsSubviews="YES" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Insert" translatesAutoresizingMaskIntoConstraints="NO" id="u6O-7O-L0C">
-                                            <rect key="frame" x="346" y="0.0" width="36" height="36"/>
+                                            <rect key="frame" x="740" y="0.0" width="36" height="36"/>
                                             <gestureRecognizers/>
                                             <constraints>
                                                 <constraint firstAttribute="width" secondItem="u6O-7O-L0C" secondAttribute="height" multiplier="1:1" id="Xl1-Qy-jaS"/>
@@ -85,16 +85,16 @@
                                     </constraints>
                                 </view>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Kj5-Ml-wRx" userLabel="Balance View">
-                                    <rect key="frame" x="16" y="101" width="382" height="103.5"/>
+                                    <rect key="frame" x="16" y="101" width="776" height="103.5"/>
                                     <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" ambiguous="YES" text="Total Saldo Kamu" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0NB-tQ-yJD">
-                                            <rect key="frame" x="14" y="14" width="354" height="20"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" text="Total Saldo Kamu" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0NB-tQ-yJD">
+                                            <rect key="frame" x="14" y="14" width="748" height="20"/>
                                             <fontDescription key="fontDescription" name="Poppins-SemiBold" family="Poppins" pointSize="14"/>
                                             <color key="textColor" name="FFFFFF"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Rp. &lt;net amout&gt;" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wqg-Iv-uTb" userLabel="balance">
-                                            <rect key="frame" x="14" y="36" width="354" height="50.5"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Rp. &lt;net amout&gt;" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wqg-Iv-uTb" userLabel="balance">
+                                            <rect key="frame" x="14" y="36" width="748" height="50.5"/>
                                             <fontDescription key="fontDescription" name="Poppins-SemiBold" family="Poppins" pointSize="36"/>
                                             <color key="textColor" name="FFFFFF"/>
                                             <nil key="highlightedColor"/>
@@ -118,7 +118,7 @@
                                     </userDefinedRuntimeAttributes>
                                 </view>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6KV-cH-eYB" userLabel="Last Deposit View">
-                                    <rect key="frame" x="16" y="216.5" width="186" height="47"/>
+                                    <rect key="frame" x="16" y="216.5" width="378" height="47"/>
                                     <subviews>
                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Arrow_Up" translatesAutoresizingMaskIntoConstraints="NO" id="jTH-jn-O7J">
                                             <rect key="frame" x="15.5" y="15" width="15.5" height="16"/>
@@ -127,13 +127,13 @@
                                             </constraints>
                                         </imageView>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Uang Masuk" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vNa-R0-XEf">
-                                            <rect key="frame" x="42" y="5" width="128.5" height="14"/>
+                                            <rect key="frame" x="42" y="5" width="320.5" height="17"/>
                                             <fontDescription key="fontDescription" name="Poppins-Medium" family="Poppins" pointSize="12"/>
                                             <color key="textColor" name="828282"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="&lt;last Depo&gt;" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zaq-Rz-xVa" userLabel="amount">
-                                            <rect key="frame" x="42" y="28" width="128.5" height="13"/>
+                                            <rect key="frame" x="42" y="25.5" width="320.5" height="15.5"/>
                                             <fontDescription key="fontDescription" name="Poppins-Regular" family="Poppins" pointSize="11"/>
                                             <color key="textColor" name="5069B8"/>
                                             <nil key="highlightedColor"/>
@@ -159,7 +159,7 @@
                                     </userDefinedRuntimeAttributes>
                                 </view>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Zq2-Zy-S0Q" userLabel="Last Withdraw View">
-                                    <rect key="frame" x="212" y="216.5" width="186" height="47"/>
+                                    <rect key="frame" x="414" y="216.5" width="378" height="47"/>
                                     <subviews>
                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Arrow_Down" translatesAutoresizingMaskIntoConstraints="NO" id="C0U-Yj-Xyc">
                                             <rect key="frame" x="15.5" y="15" width="15.5" height="16"/>
@@ -168,13 +168,13 @@
                                             </constraints>
                                         </imageView>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Uang Keluar" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OR0-91-rke">
-                                            <rect key="frame" x="42" y="5" width="128.5" height="14"/>
+                                            <rect key="frame" x="42" y="5" width="320.5" height="17"/>
                                             <fontDescription key="fontDescription" name="Poppins-Medium" family="Poppins" pointSize="12"/>
                                             <color key="textColor" name="828282"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="&lt;last Withdraw&gt;" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OWS-GF-D2Q" userLabel="amount">
-                                            <rect key="frame" x="42" y="28" width="128.5" height="13"/>
+                                            <rect key="frame" x="42" y="25.5" width="320.5" height="15.5"/>
                                             <fontDescription key="fontDescription" name="Poppins-Regular" family="Poppins" pointSize="11"/>
                                             <color key="textColor" name="5069B8"/>
                                             <nil key="highlightedColor"/>
@@ -200,14 +200,14 @@
                                     </userDefinedRuntimeAttributes>
                                 </view>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3T0-V0-GjC" userLabel="History View">
-                                    <rect key="frame" x="0.0" y="309.5" width="414" height="647.5"/>
+                                    <rect key="frame" x="0.0" y="309.5" width="808" height="258.5"/>
                                     <subviews>
                                         <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="ICi-xc-tZW">
-                                            <rect key="frame" x="17" y="58" width="380" height="477"/>
+                                            <rect key="frame" x="17" y="61.5" width="774" height="188"/>
                                             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                         </tableView>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Riwayat Penggunaan" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qWE-LL-Aus">
-                                            <rect key="frame" x="17" y="23" width="151.5" height="19"/>
+                                            <rect key="frame" x="17" y="23" width="175" height="22.5"/>
                                             <fontDescription key="fontDescription" name="Poppins-SemiBold" family="Poppins" pointSize="16"/>
                                             <color key="textColor" name="000000"/>
                                             <nil key="highlightedColor"/>
@@ -216,7 +216,7 @@
                                     <color key="backgroundColor" name="FFFFFF"/>
                                     <constraints>
                                         <constraint firstAttribute="trailing" secondItem="ICi-xc-tZW" secondAttribute="trailing" constant="17" id="Bw7-Oh-iPh"/>
-                                        <constraint firstAttribute="bottom" secondItem="ICi-xc-tZW" secondAttribute="bottom" constant="112.5" id="F52-Kj-UCK"/>
+                                        <constraint firstAttribute="bottom" secondItem="ICi-xc-tZW" secondAttribute="bottom" constant="9" id="F52-Kj-UCK"/>
                                         <constraint firstItem="ICi-xc-tZW" firstAttribute="top" secondItem="qWE-LL-Aus" secondAttribute="bottom" constant="16" id="Idk-Dn-Mm2"/>
                                         <constraint firstItem="ICi-xc-tZW" firstAttribute="leading" secondItem="3T0-V0-GjC" secondAttribute="leading" constant="17" id="dLv-xh-YO8"/>
                                         <constraint firstItem="qWE-LL-Aus" firstAttribute="top" secondItem="3T0-V0-GjC" secondAttribute="top" constant="23" id="jwo-3X-Wld"/>
@@ -246,7 +246,7 @@
                                 <constraint firstAttribute="trailing" secondItem="2kR-Ur-p98" secondAttribute="trailing" constant="16" id="jWK-W3-zWB"/>
                                 <constraint firstItem="6KV-cH-eYB" firstAttribute="top" secondItem="Kj5-Ml-wRx" secondAttribute="bottom" constant="12" id="k3x-Kb-buS"/>
                                 <constraint firstItem="3T0-V0-GjC" firstAttribute="leading" secondItem="Msc-Qr-7vK" secondAttribute="leading" id="lZy-G3-90R"/>
-                                <constraint firstAttribute="bottom" secondItem="3T0-V0-GjC" secondAttribute="bottom" constant="-389" id="nTl-Nb-pIz"/>
+                                <constraint firstAttribute="bottom" secondItem="3T0-V0-GjC" secondAttribute="bottom" id="nTl-Nb-pIz"/>
                                 <constraint firstAttribute="height" constant="568" id="rFR-2D-k5L"/>
                             </constraints>
                         </view>
@@ -271,7 +271,7 @@
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="pT8-XS-HFo" secondAttribute="bottom" id="i0b-Ow-s9W"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="pT8-XS-HFo" secondAttribute="trailing" id="snQ-wg-lEt"/>
             </constraints>
-            <point key="canvasLocation" x="-150" y="441.54929577464787"/>
+            <point key="canvasLocation" x="-151.33928571428569" y="440.57971014492756"/>
         </view>
         <tapGestureRecognizer id="Jbl-eS-qa3">
             <connections>
