--- a/MyMonee-Final/UIComponents/EmptyDataHistory.xib
+++ b/MyMonee-Final/UIComponents/EmptyDataHistory.xib
@@ -19,22 +19,19 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="EmptyDataHistory" customModule="MyMonee_Final" customModuleProvider="target">
             <connections>
-                <outlet property="view" destination="BmT-JQ-v9q" id="mTz-qm-TwK"/>
+                <outlet property="view" destination="iN0-l3-epB" id="iwR-TM-UKK"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB">
-            <rect key="frame" x="0.0" y="0.0" width="414" height="321"/>
+            <rect key="frame" x="0.0" y="0.0" width="414" height="606"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BmT-JQ-v9q">
-                    <rect key="frame" x="0.0" y="60.5" width="414" height="200"/>
+                    <rect key="frame" x="0.0" y="147.5" width="414" height="311"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EWX-zc-eKZ">
-                            <rect key="frame" x="86.5" y="73" width="241.5" height="54"/>
-                            <constraints>
-                                <constraint firstAttribute="height" constant="54" id="6e9-xF-gdS"/>
-                            </constraints>
+                            <rect key="frame" x="86.5" y="134.5" width="241.5" height="42"/>
                             <string key="text">Data kamu kosong,
 Yuk mulai buat Catatan kamu!</string>
                             <fontDescription key="fontDescription" name="Poppins-Medium" family="Poppins" pointSize="18"/>
@@ -42,7 +39,7 @@ Yuk mulai buat Catatan kamu!</string>
                             <nil key="highlightedColor"/>
                         </label>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fS9-qZ-h1Q">
-                            <rect key="frame" x="91.5" y="151" width="231" height="43"/>
+                            <rect key="frame" x="91.5" y="202" width="231" height="43"/>
                             <color key="backgroundColor" name="5069B8"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="43" id="JYx-T1-M9B"/>
@@ -61,11 +58,11 @@ Yuk mulai buat Catatan kamu!</string>
                     </subviews>
                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     <constraints>
-                        <constraint firstItem="fS9-qZ-h1Q" firstAttribute="centerX" secondItem="EWX-zc-eKZ" secondAttribute="centerX" id="GOj-9H-zn3"/>
-                        <constraint firstItem="fS9-qZ-h1Q" firstAttribute="top" secondItem="EWX-zc-eKZ" secondAttribute="bottom" constant="24" id="Hom-0Z-Fj8"/>
-                        <constraint firstAttribute="height" constant="200" id="YDH-Ud-qBh"/>
-                        <constraint firstItem="EWX-zc-eKZ" firstAttribute="centerY" secondItem="BmT-JQ-v9q" secondAttribute="centerY" id="dpo-du-1Xz"/>
-                        <constraint firstItem="EWX-zc-eKZ" firstAttribute="centerX" secondItem="BmT-JQ-v9q" secondAttribute="centerX" id="oap-Ma-SAK"/>
+                        <constraint firstItem="EWX-zc-eKZ" firstAttribute="centerX" secondItem="BmT-JQ-v9q" secondAttribute="centerX" id="88o-bS-gUV"/>
+                        <constraint firstItem="fS9-qZ-h1Q" firstAttribute="centerX" secondItem="EWX-zc-eKZ" secondAttribute="centerX" id="SLe-O0-eOB"/>
+                        <constraint firstItem="fS9-qZ-h1Q" firstAttribute="top" secondItem="EWX-zc-eKZ" secondAttribute="bottom" constant="25.5" id="TZI-TA-Q2A"/>
+                        <constraint firstAttribute="height" constant="311" id="YDH-Ud-qBh"/>
+                        <constraint firstItem="EWX-zc-eKZ" firstAttribute="centerY" secondItem="BmT-JQ-v9q" secondAttribute="centerY" id="cxM-vx-Kl0"/>
                     </constraints>
                 </view>
             </subviews>
@@ -73,13 +70,11 @@ Yuk mulai buat Catatan kamu!</string>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
                 <constraint firstItem="BmT-JQ-v9q" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="Nez-YS-khT"/>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="BmT-JQ-v9q" secondAttribute="trailing" id="d7g-ej-ctK"/>
-                <constraint firstItem="BmT-JQ-v9q" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="hcd-hp-lwH"/>
-                <constraint firstItem="BmT-JQ-v9q" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="oJr-4W-Vz6"/>
-                <constraint firstItem="BmT-JQ-v9q" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="tMq-Mz-Uzg"/>
+                <constraint firstItem="BmT-JQ-v9q" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="Ugb-gO-xQG"/>
+                <constraint firstItem="BmT-JQ-v9q" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="Vk9-qd-Sxu"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <point key="canvasLocation" x="137.68115942028987" y="-108.14732142857143"/>
+            <point key="canvasLocation" x="137.68115942028987" y="-12.723214285714285"/>
         </view>
     </objects>
     <resources>
