--- a/MyMonee-Final/Views/ImpianViewControllerNew.xib
+++ b/MyMonee-Final/Views/ImpianViewControllerNew.xib
@@ -5,6 +5,7 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
@@ -16,6 +17,7 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ImpianViewControllerNew" customModule="MyMonee_Final" customModuleProvider="target">
             <connections>
                 <outlet property="dataTable" destination="CJW-LT-1yD" id="8II-Rm-Cit"/>
+                <outlet property="empty" destination="LfW-QY-Srw" id="DDn-i7-MTi"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -30,6 +32,10 @@
                     <color key="textColor" name="4F4F4F"/>
                     <nil key="highlightedColor"/>
                 </label>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LfW-QY-Srw" customClass="EmptyDataHistory" customModule="MyMonee_Final" customModuleProvider="target">
+                    <rect key="frame" x="0.0" y="126" width="414" height="736"/>
+                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                </view>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Wzb-Oq-Sq0">
                     <rect key="frame" x="361" y="61.5" width="36" height="36"/>
                     <state key="normal" image="Insert"/>
@@ -49,14 +55,18 @@
             <constraints>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="CJW-LT-1yD" secondAttribute="bottom" id="C4n-3j-8SH"/>
                 <constraint firstItem="Wzb-Oq-Sq0" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="17.530000000000001" id="EfL-A6-ahr"/>
+                <constraint firstItem="LfW-QY-Srw" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="TmK-AC-B4s"/>
+                <constraint firstItem="LfW-QY-Srw" firstAttribute="bottom" secondItem="fnl-2z-Ty3" secondAttribute="bottom" id="UCj-xb-X6y"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="Wzb-Oq-Sq0" secondAttribute="trailing" constant="17" id="hZ2-LK-ad5"/>
                 <constraint firstItem="CJW-LT-1yD" firstAttribute="top" secondItem="H4u-Va-znm" secondAttribute="bottom" constant="31" id="iVz-UY-NVy"/>
+                <constraint firstItem="LfW-QY-Srw" firstAttribute="top" secondItem="Wzb-Oq-Sq0" secondAttribute="bottom" constant="28.5" id="kr3-zj-3wn"/>
                 <constraint firstItem="H4u-Va-znm" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="16" id="m6A-7h-utl"/>
                 <constraint firstItem="CJW-LT-1yD" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="p5P-2f-SBh"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="CJW-LT-1yD" secondAttribute="trailing" id="s2I-Kg-n5h"/>
+                <constraint firstItem="LfW-QY-Srw" firstAttribute="trailing" secondItem="fnl-2z-Ty3" secondAttribute="trailing" id="vG2-1b-P8u"/>
                 <constraint firstItem="H4u-Va-znm" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="16.690000000000001" id="wvy-lT-krV"/>
             </constraints>
-            <point key="canvasLocation" x="-54" y="85"/>
+            <point key="canvasLocation" x="-55.072463768115945" y="84.375"/>
         </view>
     </objects>
     <resources>
@@ -70,5 +80,8 @@
         <namedColor name="F0F2F8">
             <color red="0.94099998474121094" green="0.94900000095367432" blue="0.97299998998641968" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
     </resources>
 </document>
