--- a/MyMonee-Final/Views/ImpianViewControllerNew.xib
+++ b/MyMonee-Final/Views/ImpianViewControllerNew.xib
@@ -5,7 +5,6 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
@@ -32,9 +31,8 @@
                     <color key="textColor" name="4F4F4F"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LfW-QY-Srw" customClass="EmptyDataHistory" customModule="MyMonee_Final" customModuleProvider="target">
+                <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LfW-QY-Srw" customClass="EmptyDataHistory" customModule="MyMonee_Final" customModuleProvider="target">
                     <rect key="frame" x="0.0" y="126" width="414" height="736"/>
-                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                 </view>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Wzb-Oq-Sq0">
                     <rect key="frame" x="361" y="61.5" width="36" height="36"/>
@@ -80,8 +78,5 @@
         <namedColor name="F0F2F8">
             <color red="0.94099998474121094" green="0.94900000095367432" blue="0.97299998998641968" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
     </resources>
 </document>
