--- a/MyMonee-Final/UIComponents/EmptyDataHistory.xib
+++ b/MyMonee-Final/UIComponents/EmptyDataHistory.xib
@@ -28,10 +28,13 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BmT-JQ-v9q">
-                    <rect key="frame" x="0.0" y="147.5" width="414" height="311"/>
+                    <rect key="frame" x="0.0" y="233.5" width="414" height="139"/>
                     <subviews>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EWX-zc-eKZ">
-                            <rect key="frame" x="86.5" y="134.5" width="241.5" height="42"/>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" minimumFontSize="9" adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="EWX-zc-eKZ">
+                            <rect key="frame" x="0.0" y="10" width="414" height="50.5"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="50.5" id="PhQ-tK-bid"/>
+                            </constraints>
                             <string key="text">Data kamu kosong,
 Yuk mulai buat Catatan kamu!</string>
                             <fontDescription key="fontDescription" name="Poppins-Medium" family="Poppins" pointSize="18"/>
@@ -39,7 +42,7 @@ Yuk mulai buat Catatan kamu!</string>
                             <nil key="highlightedColor"/>
                         </label>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fS9-qZ-h1Q">
-                            <rect key="frame" x="91.5" y="202" width="231" height="43"/>
+                            <rect key="frame" x="91.5" y="86" width="231" height="43"/>
                             <color key="backgroundColor" name="5069B8"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="43" id="JYx-T1-M9B"/>
@@ -60,11 +63,12 @@ Yuk mulai buat Catatan kamu!</string>
                         </button>
                     </subviews>
                     <constraints>
-                        <constraint firstItem="EWX-zc-eKZ" firstAttribute="centerX" secondItem="BmT-JQ-v9q" secondAttribute="centerX" id="88o-bS-gUV"/>
+                        <constraint firstAttribute="bottom" secondItem="fS9-qZ-h1Q" secondAttribute="bottom" constant="10" id="MBl-hH-AJx"/>
+                        <constraint firstItem="EWX-zc-eKZ" firstAttribute="leading" secondItem="BmT-JQ-v9q" secondAttribute="leading" id="NjM-9T-wiv"/>
                         <constraint firstItem="fS9-qZ-h1Q" firstAttribute="centerX" secondItem="EWX-zc-eKZ" secondAttribute="centerX" id="SLe-O0-eOB"/>
                         <constraint firstItem="fS9-qZ-h1Q" firstAttribute="top" secondItem="EWX-zc-eKZ" secondAttribute="bottom" constant="25.5" id="TZI-TA-Q2A"/>
-                        <constraint firstAttribute="height" constant="311" id="YDH-Ud-qBh"/>
-                        <constraint firstItem="EWX-zc-eKZ" firstAttribute="centerY" secondItem="BmT-JQ-v9q" secondAttribute="centerY" id="cxM-vx-Kl0"/>
+                        <constraint firstAttribute="trailing" secondItem="EWX-zc-eKZ" secondAttribute="trailing" id="XZ0-la-zTU"/>
+                        <constraint firstItem="EWX-zc-eKZ" firstAttribute="top" secondItem="BmT-JQ-v9q" secondAttribute="top" constant="10" id="Zjv-3I-xNL"/>
                     </constraints>
                 </view>
             </subviews>
