--- a/MyMonee-Final/Views/HomeViewController.xib
+++ b/MyMonee-Final/Views/HomeViewController.xib
@@ -218,8 +218,9 @@
                                             <color key="textColor" name="000000"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="large" translatesAutoresizingMaskIntoConstraints="NO" id="uSh-ZQ-PF0">
+                                        <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" animating="YES" style="large" translatesAutoresizingMaskIntoConstraints="NO" id="uSh-ZQ-PF0">
                                             <rect key="frame" x="188.5" y="263" width="37" height="37"/>
+                                            <color key="tintColor" red="0.0" green="0.45882352939999999" blue="0.89019607840000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         </activityIndicatorView>
                                     </subviews>
                                     <color key="backgroundColor" name="FFFFFF"/>
